tests/NormalTests/paczka1/small_fuzzy/13342503.err
Error in line 1: AOOgbzjK1f A867 97,8
Error in line 5: SSOxx S274 70,2
Error in line 7: prLGUe S274 72,2
Error in line 12: Od7FJSB S274 62,3
